# drug-target-agent

./: .dockerignore  .env.example  .env.production.example  .gitignore  Caddyfile  Dockerfile.api  Dockerfile.caddy  LICENSE  README.md  blog-post.md  docker-compose.yml  pyproject.toml
deploy/: init-load.sh  load-reports.sh  setup.sh  update.sh
frontend/: edge-demo.html  index.html  package-lock.json  package.json
frontend/src/: App.vue  style.css
reports/: report-alzheimer-disease.json  report-alzheimer-disease.md  report-amyotrophic-lateral-sclerosis.json  report-amyotrophic-lateral-sclerosis.md  report-glut-1-deficiency-syndrome.json  report-glut-1-deficiency-syndrome.md  report-huntington-disease.json  report-huntington-disease.md  report-migraine.json  report-migraine.md  report-multiple-sclerosis.json  report-multiple-sclerosis.md  report-parkinson-disease.json  report-parkinson-disease.md  report-schizophrenia.json  report-schizophrenia.md
src/: models.py  neo4j_loader.py  orchestrator.py
src/agents/: druggability.py  gene_hunter.py  literature.py
src/api/: app.py  neo4j_client.py  routes.py
src/mcp/: __init__.py  server.py
src/tools/: alphafold.py  chembl.py  open_targets.py  pubmed.py  reactome.py  uniprot.py
tests/: test_models.py  test_neo4j_loader.py  test_orchestrator.py
tests/agents/: test_druggability.py  test_gene_hunter.py  test_literature.py
tests/api/: test_routes.py
tests/fixtures/: chembl_activities.json  chembl_molecules.json  chembl_target.json  open_targets_associations.json  open_targets_search.json  pubmed_efetch.xml  (+3 more)
(+19 files in other folders)
