[project]
name = "drug-target-recon"
version = "0.1.0"
description = "Multi-agent drug target reconnaissance system"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
